Attempt fix for mobile x-overflow

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
 }
 html, body {
     touch-action: pan-y;
+    top: 0;
+    left: 0;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -28,6 +30,7 @@ body {
 
 body::-webkit-scrollbar {
     display: none; /* Chrome, Safari, and Opera */
+    overflow-x: hidden;
 }
 body.light-mode {
     color: var(--resin-black);
@@ -1073,8 +1076,11 @@ footer p {
     canvas {
         overflow-x: hidden;
         display: block;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
+    }
+    .projects, .project-container, .tab-content {
+        width: 100%; 
     }
 }
 @media (min-width: 601px) {
